--- a/k8s_project.yaml
+++ b/k8s_project.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels: 
       app: nodejs
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: nodejs-cd
-        image: localregistry:5000/nodejs_project
+        image: localregistry:5000/nodejs
 ---
 apiVersion: v1
 kind: Service
