--- a/k8s_project.yaml
+++ b/k8s_project.yaml
@@ -15,6 +15,15 @@ spec:
       containers:
       - name: nodejs-cd
         image: localregistry:5000/nodejs
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+          periodSeconds: 7
+
 ---
 apiVersion: v1
 kind: Service
